# Cminusminus

./: Ability.cpp  Ability.h  Affliction.cpp  Affliction.h  CMakeLists.txt  FundamentalSystem.cpp  FundamentalSystem.h  Gui.cpp  Gui.h  Interpolate.h  LivingThing.cpp  LivingThing.h  Nash_Equilibium.txt  StatParam.cpp  StatParam.h  UltimateGame.cpp  class.cpp  class.h  constructor ต่างๆ.txt  main.cpp  readme.md  sim.cpp  test.cpp  testGraph.py
.cache/clangd/index/: ALCheck.cpp.734FFD89470124F2.idx  ALCheck.hpp.70F9928E570D26C1.idx  AlResource.cpp.6ED0FDBC86EC14F6.idx  AlResource.hpp.8387C3ECEA6F9928.idx  Audio.hpp.2E364BE9D24E07DF.idx  AudioDevice.cpp.F5CAC02A181D2BA2.idx  AudioDevice.hpp.C7EA9367B86B1476.idx  BlendMode.cpp.7076C544B4E86857.idx  BlendMode.hpp.1211FBB7782F991D.idx  CircleShape.cpp.E6F0869686AEC70D.idx  CircleShape.hpp.2226281B639D74AA.idx  Clipboard.cpp.04D05D737276475B.idx  Clipboard.hpp.982334B70978AA3E.idx  ClipboardImpl.cpp.DFFDDD5E3521B5D3.idx  ClipboardImpl.hpp.61E32251744A0DC3.idx  ClipboardImpl.hpp.EC622AA3C162EC15.idx  Clock.cpp.D72B2BA2A52DE00B.idx  Clock.hpp.26355CCE73C4F212.idx  ClockImpl.cpp.95B7FB59EACE39C9.idx  ClockImpl.hpp.790EE82FCE6AD175.idx  Color.cpp.7197EEF4BC879BB8.idx  Color.hpp.814672246A137961.idx  Config.hpp.E90D8CD9A12B4694.idx  Context.cpp.C1158D2F047CA0B8.idx  Context.hpp.2A79A7143522BFC6.idx  ContextSettings.hpp.BDE909A211A9517B.idx  ConvexShape.cpp.98D2E8E1DFAF26AF.idx  ConvexShape.hpp.F1AD9D785E03D279.idx  Cursor.cpp.82253BBB7893DB51.idx  Cursor.hpp.7B6EF62D5F92879A.idx  (+264 more)
a/: FundamentalSystem.cpp  FundamentalSystem.h
